Update from template

--- a/money_t.ipynb
+++ b/money_t.ipynb
@@ -68,7 +68,7 @@
     "# Get the columns of interest into their own data frame, and recode.\n",
     "money_death = pd.DataFrame()\n",
     "money_death['Income'] = gss['Income'].apply(recode_income)\n",
-    "money_death['DeathPenalty'] = gss['DeathPenalty']\n",
+    "money_death['DeathPenalty'] = gss['DeathPenalty'].copy()\n",
     "# Drop all missing values.\n",
     "slim_md = money_death.dropna()\n",
     "# Show the first five rows.\n",
