Update from template

--- a/money_t.ipynb
+++ b/money_t.ipynb
@@ -301,15 +301,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, calculate the t-test t value by hand.\n",
+    "The next step is to calculate the t-test t value step by step.\n",
     "\n",
     "Remember, the t test has a numerator that is the actual difference in means,\n",
     "divided by a denominator, which is an *estimate*, using some assumptions, of\n",
     "the *standard deviation of the sampling distribution*.\n",
     "\n",
-    "The denominator comprises made up of two components.  The first we will\n",
-    "calculate below; it is an estimate of the variation left after subtracting the\n",
-    "two group means.  The second is a bit arcane, and I've just given that bit to\n",
+    "The *t denominator* comprises two components.  The first we will calculate\n",
+    "further below; it is an estimate of the variation left after subtracting the\n",
+    "two group means.  The second is a bit arcane, and I've just given that part to\n",
     "you here:"
    ]
   },
@@ -392,8 +392,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, calculate the t value using the numerator and the two parts of the\n",
-    "denominator:"
+    "The full denominator is the two parts, multiplied.  Remember that the t\n",
+    "denominator is an estimate, using some assumptions, of the standard deviation\n",
+    "of the sampling distribution.  Your permutation test also estimated the\n",
+    "sampling distribution.  In the cell below you should see that the t denominator\n",
+    "estimate and the permutation group estimate are pretty similar:"
    ]
   },
   {
@@ -403,8 +406,98 @@
    "outputs": [],
    "source": [
     "# Run this cell\n",
-    "calculated_t = actual_diff / (first_part_of_denom * second_part_of_denom)\n",
+    "t_denom = first_part_of_denom * second_part_of_denom\n",
+    "print('Standard deviation of sampling distribution')\n",
+    "print('Permutation estimate', np.std(fake_differences))\n",
+    "print('t-test estimate', t_denom)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For reflection: why might these two estimates be different?\n",
+    "\n",
+    "Finally, calculate the t-test t value - the numerator (observed difference)\n",
+    "divided by the denominator (estimate of standard deviation of observed\n",
+    "difference)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#- Divide the numerator by the denominator to get \"calculated_t\"\n",
+    "calculated_t = ...\n",
+    "# Show the result\n",
     "calculated_t"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You should find this is the same (to many decimal places) as the result that\n",
+    "Scipy calculated above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = ok.grade('q_calculated_t')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we can use a function in Scipy to give a probability value to the t\n",
+    "value.  Don't worry about remembering this function - we won't use it again in\n",
+    "this course."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Show the t-test probability value\n",
+    "# The Scipy statistics sub-module.\n",
+    "import scipy.stats as sps\n",
+    "# Using the Cumulative Distribution Function method of the t distribution, to\n",
+    "# calculate the one-tailed p-value for the t test.\n",
+    "t_p_value = 1 - sps.t.cdf(calculated_t, degrees_of_freedom)\n",
+    "print('p value for t test', t_p_value)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This will be similar to the p value estimate from the permutation test, that\n",
+    "you calculated above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('p value for permutation test', p_fake_ge_actual)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For reflection: why might these two be different?"
    ]
   },
   {
