Update from template

--- a/money_t.ipynb
+++ b/money_t.ipynb
@@ -155,7 +155,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_favor = ..."
+    "# The number of people who were in Favor.\n",
+    "n_favor = len(favor_income_arr)\n",
+    "# Concatenate the in-favor and opposed incomes.\n",
+    "pooled = np.append(favor_income_arr, oppose_income_arr)\n",
+    "# Show the first 10 values before shuffling.\n",
+    "pooled[:10]"
    ]
   },
   {
