Update from template

--- a/money_t.ipynb
+++ b/money_t.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "4764598d",
    "metadata": {},
    "source": [
     "# Money, death and t\n",
@@ -14,6 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3233e0c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +38,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a77ea7a9",
    "metadata": {},
    "source": [
     "As revision, we are going to do a permutation test on the results from a\n",
@@ -47,6 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "15ffac24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,6 +81,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8c095899",
    "metadata": {},
    "source": [
     "Next fetch the income values for those in \"Favor\" of the death penalty, and for those who \"Oppose\".  Put them in arrays."
@@ -85,6 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "57c6da4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,6 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2fe7d4a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,6 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "73758a01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,6 +125,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c678068c",
    "metadata": {},
    "source": [
     "Calculate the difference in mean income between the groups.  This is the\n",
@@ -126,6 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e1ccc45e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,6 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "01a806d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,6 +155,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f614b4f9",
    "metadata": {},
    "source": [
     "Next, the permutation test."
@@ -152,6 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "daede68b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,6 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "46bd2e67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,6 +201,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "27544714",
    "metadata": {},
    "source": [
     "Do a histogram of the fake differences.  This is the *sampling distribution*\n",
@@ -197,6 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "23686977",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,6 +222,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6712b069",
    "metadata": {},
    "source": [
     "Show the proportion of the differences you calculated that were greater than or\n",
@@ -215,6 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7c83a0c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,6 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e079437e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,6 +252,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "84d9bb7d",
    "metadata": {},
    "source": [
     "This proportion gives an estimate of the probability of seeing a difference\n",
@@ -241,6 +261,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6a76ae69",
    "metadata": {},
    "source": [
     "## Compare to t\n",
@@ -251,6 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4586892a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,6 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "df7a0172",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,16 +293,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "80e78915",
    "metadata": {},
    "source": [
     "Now calculate the actual t statistic.  Follow the recipe in the [permtuation\n",
-    "and t test page](https://matthew-brett.github.io/cfd2020/permutation/permutation_and_t_test), to\n",
+    "and t test page](https://uob-ds.github.io/cfd2021/permutation/permutation_and_t_test), to\n",
     "import the t-test routine from Scipy, and run it on the two arrays of values."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f828b377",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,6 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b80d0388",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,6 +330,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b93ab3cc",
    "metadata": {},
    "source": [
     "The next step is to calculate the t-test t value step by step.\n",
@@ -321,6 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f7b19a51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,6 +363,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d0cb6500",
    "metadata": {},
    "source": [
     "Now for the first part.  To calculate it, you will need something called\n",
@@ -345,6 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0f7b270a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,15 +386,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "003bd6ef",
    "metadata": {},
    "source": [
     "Now to finish the calculation of the first half of the denominator, do the\n",
-    "following steps.  See the [permtuation and t test page](https://matthew-brett.github.io/cfd2020/permutation/permutation_and_t_test), for inspiration."
+    "following steps.  See the [permtuation and t test page](https://uob-ds.github.io/cfd2021/permutation/permutation_and_t_test), for inspiration."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b1747741",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,6 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "12b7fbb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,6 +428,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c670889e",
    "metadata": {},
    "source": [
     "The full denominator is the two parts, multiplied.  Remember that the t\n",
@@ -407,6 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "30c1ae58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,6 +454,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3a80324e",
    "metadata": {},
    "source": [
     "For reflection: why might these two estimates be different?\n",
@@ -431,6 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a4bd26d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,6 +479,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "86af303b",
    "metadata": {},
    "source": [
     "You should find this is the same (to many decimal places) as the result that\n",
@@ -451,6 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "16e28c8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,6 +498,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b21dbd27",
    "metadata": {},
    "source": [
     "Finally, we can use a function in Scipy to give a probability value to the t\n",
@@ -469,6 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9cc96f1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,6 +524,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ca1c9a12",
    "metadata": {},
    "source": [
     "This will be similar to the p value estimate from the permutation test, that\n",
@@ -492,6 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d2354fc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,6 +543,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a3eba522",
    "metadata": {},
    "source": [
     "For reflection: why might these two be different?"
@@ -507,6 +551,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a52cd6b9",
    "metadata": {},
    "source": [
     "## Done"
@@ -515,6 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "129a89ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,5 +587,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
