Update from template

--- a/money_t.ipynb
+++ b/money_t.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "72be71f8",
+   "id": "4476ebc7",
    "metadata": {},
    "source": [
     "# Money, death and t\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65cfbc5c",
+   "id": "a0f2eda0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f529629e",
+   "id": "f476a0a0",
    "metadata": {},
    "source": [
     "As revision, we are going to do a permutation test on the results from a\n",
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6e9fbd9",
+   "id": "183b29af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c593bc99",
+   "id": "a1766bf0",
    "metadata": {},
    "source": [
     "Next fetch the income values for those in \"Favor\" of the death penalty, and for those who \"Oppose\".  Put them in arrays."
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d39dcf73",
+   "id": "5688428d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d34414dd",
+   "id": "6a09f286",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bd826cf",
+   "id": "57080cf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e1d8577",
+   "id": "ad7b8e84",
    "metadata": {},
    "source": [
     "Calculate the difference in mean income between the groups.  This is the\n",
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca7762e3",
+   "id": "27d60af8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95291171",
+   "id": "283c0ea1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a489d241",
+   "id": "7db1b2b2",
    "metadata": {},
    "source": [
     "Next, the permutation test."
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73e5f90d",
+   "id": "b1d43773",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c442b22",
+   "id": "61e94219",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69e74ac6",
+   "id": "a15e53a0",
    "metadata": {},
    "source": [
     "Do a histogram of the fake differences.  This is the *sampling distribution*\n",
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ffafe0d8",
+   "id": "e7ef4f6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79e5ff20",
+   "id": "92613275",
    "metadata": {},
    "source": [
     "Show the proportion of the differences you calculated that were greater than or\n",
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a922fba",
+   "id": "690b8366",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1e82afa",
+   "id": "de8be2fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae46aa53",
+   "id": "f18a9ae4",
    "metadata": {},
    "source": [
     "This proportion gives an estimate of the probability of seeing a difference\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51a32b13",
+   "id": "be731e04",
    "metadata": {},
    "source": [
     "## Compare to t\n",
@@ -272,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae32937b",
+   "id": "856b0daf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efb2bf0f",
+   "id": "dbed1cc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,18 +293,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47c22fb2",
+   "id": "8e383c97",
    "metadata": {},
    "source": [
     "Now calculate the actual t statistic.  Follow the recipe in the [permtuation\n",
-    "and t test page](https://uob-ds.github.io/cfd2023/permutation/permutation_and_t_test), to\n",
+    "and t test page](https:/olsonac.github.io/textbook/permutation/permutation_and_t_test), to\n",
     "import the t-test routine from Scipy, and run it on the two arrays of values."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e7ec5ec",
+   "id": "779965f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e363fdf8",
+   "id": "c01d321c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "321486f8",
+   "id": "620ffbec",
    "metadata": {},
    "source": [
     "The next step is to calculate the t-test t value step by step.\n",
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd44beb3",
+   "id": "956fbe12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1ca1d70",
+   "id": "6cadf7c4",
    "metadata": {},
    "source": [
     "Now for the first part.  To calculate it, you will need something called\n",
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10f0e654",
+   "id": "fa4fb966",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,17 +386,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c45faae0",
+   "id": "ca176b7b",
    "metadata": {},
    "source": [
     "Now to finish the calculation of the first half of the denominator, do the\n",
-    "following steps.  See the [permtuation and t test page](https://uob-ds.github.io/cfd2023/permutation/permutation_and_t_test), for inspiration."
+    "following steps.  See the [permtuation and t test page](https:/olsonac.github.io/textbook/permutation/permutation_and_t_test), for inspiration."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b69e3af9",
+   "id": "552f7d46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b728148",
+   "id": "34c8119f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13389cf5",
+   "id": "850805fa",
    "metadata": {},
    "source": [
     "The full denominator is the two parts, multiplied.  Remember that the t\n",
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2f818bc",
+   "id": "a312d318",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c13d54d8",
+   "id": "3353db4a",
    "metadata": {},
    "source": [
     "For reflection: why might these two estimates be different?\n",
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be36c63d",
+   "id": "bbec1711",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "374c8d40",
+   "id": "46a3532d",
    "metadata": {},
    "source": [
     "You should find this is the same (to many decimal places) as the result that\n",
@@ -489,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9939d177",
+   "id": "c9dcf8a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "561e3b75",
+   "id": "b5ba68b1",
    "metadata": {},
    "source": [
     "Finally, we can use a function in Scipy to give a probability value to the t\n",
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "128c86c7",
+   "id": "0869d3aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c35d9bba",
+   "id": "17e99ec8",
    "metadata": {},
    "source": [
     "This will be similar to the p value estimate from the permutation test, that\n",
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e684992",
+   "id": "d32cd158",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85bddb99",
+   "id": "b64df962",
    "metadata": {},
    "source": [
     "For reflection: why might these two be different?"
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aeb5ab67",
+   "id": "1ec79cd3",
    "metadata": {},
    "source": [
     "## Done"
@@ -560,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2251ed7a",
+   "id": "b434e630",
    "metadata": {},
    "outputs": [],
    "source": [
